// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`report / createReport multiple sources 1`] = `
{
  "assets": [
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "main.css",
      "label": "main.css",
      "runs": [
        {
          "chunkId": "1",
          "delta": -1000,
          "deltaPercentage": -9.09090909,
          "deltaType": "POSITIVE",
          "displayDelta": "-1000B",
          "displayDeltaPercentage": "-9.09%",
          "displayValue": "9.77KiB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a1b2c3d.css",
          "regression": false,
          "value": 10000,
        },
        {
          "chunkId": "1",
          "displayValue": "10.74KiB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.b1c2d3e.css",
          "value": 11000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "main.js",
      "label": "main.js",
      "runs": [
        {
          "chunkId": "1",
          "delta": 1000,
          "deltaPercentage": 2.04081633,
          "deltaType": "LOW_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+2.04%",
          "displayValue": "48.83KiB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a2b3c4d.js",
          "regression": true,
          "value": 50000,
        },
        {
          "chunkId": "1",
          "displayValue": "47.85KiB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.b2c3d4e.js",
          "value": 49000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "logo.png",
      "label": "logo.png",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "logo.a3b4c5d.png",
          "value": 1000,
        },
        {
          "displayValue": "1000B",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "logo.a3b4c5d.png",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "index.html",
      "label": "index.html",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1.95KiB",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "index.html",
          "value": 2000,
        },
        {
          "displayValue": "1.95KiB",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "index.html",
          "value": 2000,
        },
      ],
    },
  ],
  "createdAt": "2019-01-10T00:00:00.000Z",
  "insights": {
    "webpack": {
      "assetsSizeTotal": {
        "data": {
          "info": {
            "delta": 0,
            "deltaPercentage": 0,
            "deltaType": "NO_CHANGE",
            "displayDelta": "0B",
            "displayDeltaPercentage": "0%",
            "displayValue": "61.52KiB",
            "value": 63000,
          },
          "md": "*Bundle Size* — *61.52KiB* (*0%*).",
          "text": "Bundle Size — 61.52KiB (0%).",
        },
        "type": "info",
      },
      "duplicatePackages": {
        "data": {
          "package-c": [
            "package-a:package-c",
            "package-c",
          ],
        },
        "type": "warning",
      },
      "duplicatePackagesV3": {
        "data": {
          "packages": {
            "package-c": [
              "package-a:package-c",
              "package-c",
            ],
          },
          "text": "Bundle contains 1 duplicate package",
        },
        "type": "warning",
      },
      "newPackages": {
        "data": {
          "packages": [
            "package-d",
          ],
          "text": "Bundle introduced one new package: package-d",
        },
        "type": "warning",
      },
    },
  },
  "modules": [
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "module-a",
      "label": "module-a",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "name": "module-a",
          "originalValue": 1000,
          "value": 1000,
        },
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1000B",
          "name": "module-a",
          "originalValue": 1000,
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "module-b",
      "label": "module-b",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "delta": 500,
          "deltaPercentage": 33.33333333,
          "deltaType": "NEGATIVE",
          "displayDelta": "+500B",
          "displayDeltaPercentage": "+33.33%",
          "displayValue": "1.95KiB",
          "name": "module-b",
          "originalValue": 2000,
          "regression": true,
          "value": 2000,
        },
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1.46KiB",
          "name": "module-b",
          "originalValue": 1500,
          "value": 1500,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-a/index.js",
      "label": "node_modules/package-a/index.js",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "name": "node_modules/package-a/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1000B",
          "name": "node_modules/package-a/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "node_modules/package-a/node_modules/package-c/index.js",
      "label": "node_modules/package-a/node_modules/package-c/index.js",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "delta": 1000,
          "deltaPercentage": 100,
          "deltaType": "HIGH_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+100%",
          "displayValue": "1000B",
          "name": "node_modules/package-a/node_modules/package-c/index.js",
          "originalValue": 1000,
          "regression": true,
          "value": 1000,
        },
        {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-b/index.js",
      "label": "node_modules/package-b/index.js",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "name": "node_modules/package-b/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1000B",
          "name": "node_modules/package-b/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-c/index.js",
      "label": "node_modules/package-c/index.js",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "name": "node_modules/package-c/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1000B",
          "name": "node_modules/package-c/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "node_modules/package-d/index.js",
      "label": "node_modules/package-d/index.js",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "delta": 1000,
          "deltaPercentage": 100,
          "deltaType": "HIGH_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+100%",
          "displayValue": "1000B",
          "name": "node_modules/package-d/index.js",
          "originalValue": 1000,
          "regression": true,
          "value": 1000,
        },
        {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
  ],
  "packages": [
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-a",
      "label": "package-a",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "name": "package-a",
          "path": "node_modules/package-a",
          "value": 1000,
        },
        {
          "displayValue": "1000B",
          "name": "package-a",
          "path": "node_modules/package-a",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "package-a:package-c",
      "label": "package-a:package-c",
      "runs": [
        {
          "delta": 1000,
          "deltaPercentage": 100,
          "deltaType": "HIGH_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+100%",
          "displayValue": "1000B",
          "name": "package-c",
          "path": "node_modules/package-a/node_modules/package-c",
          "regression": true,
          "value": 1000,
        },
        {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-b",
      "label": "package-b",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "name": "package-b",
          "path": "node_modules/package-b",
          "value": 1000,
        },
        {
          "displayValue": "1000B",
          "name": "package-b",
          "path": "node_modules/package-b",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-c",
      "label": "package-c",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "name": "package-c",
          "path": "node_modules/package-c",
          "value": 1000,
        },
        {
          "displayValue": "1000B",
          "name": "package-c",
          "path": "node_modules/package-c",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "package-d",
      "label": "package-d",
      "runs": [
        {
          "delta": 1000,
          "deltaPercentage": 100,
          "deltaType": "HIGH_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+100%",
          "displayValue": "1000B",
          "name": "package-d",
          "path": "node_modules/package-d",
          "regression": true,
          "value": 1000,
        },
        {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
  ],
  "runs": [
    {
      "internalBuildNumber": 2,
      "webpack": {
        "builtAt": "2019-01-01T00:00:00.000Z",
        "chunks": [
          {
            "id": "1",
            "name": "main",
          },
        ],
        "hash": "abcd1234",
      },
    },
    {
      "internalBuildNumber": 1,
      "webpack": {
        "builtAt": "2019-01-01T00:00:00.000Z",
        "chunks": [
          {
            "id": "1",
            "name": "main",
          },
        ],
        "hash": "defg1234",
      },
    },
  ],
  "sizes": [
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.sizes.totalSizeByTypeJS",
      "label": "JS",
      "runs": [
        {
          "delta": 1000,
          "deltaPercentage": 2.04081633,
          "deltaType": "LOW_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+2.04%",
          "displayValue": "48.83KiB",
          "regression": true,
          "value": 50000,
        },
        {
          "displayValue": "47.85KiB",
          "value": 49000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.sizes.totalSizeByTypeCSS",
      "label": "CSS",
      "runs": [
        {
          "delta": -1000,
          "deltaPercentage": -9.09090909,
          "deltaType": "POSITIVE",
          "displayDelta": "-1000B",
          "displayDeltaPercentage": "-9.09%",
          "displayValue": "9.77KiB",
          "regression": false,
          "value": 10000,
        },
        {
          "displayValue": "10.74KiB",
          "value": 11000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeIMG",
      "label": "IMG",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "value": 1000,
        },
        {
          "displayValue": "1000B",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeMEDIA",
      "label": "Media",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "0B",
          "value": 0,
        },
        {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeFONT",
      "label": "Fonts",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "0B",
          "value": 0,
        },
        {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeHTML",
      "label": "HTML",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1.95KiB",
          "value": 2000,
        },
        {
          "displayValue": "1.95KiB",
          "value": 2000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeOTHER",
      "label": "Other",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "0B",
          "value": 0,
        },
        {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
  ],
  "stats": [
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.totalSizeByTypeALL",
      "label": "Bundle Size",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "61.52KiB",
          "value": 63000,
        },
        {
          "displayValue": "61.52KiB",
          "value": 63000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.totalInitialSizeJS",
      "label": "Initial JS",
      "runs": [
        {
          "delta": 1000,
          "deltaPercentage": 2.04081633,
          "deltaType": "LOW_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+2.04%",
          "displayValue": "48.83KiB",
          "regression": true,
          "value": 50000,
        },
        {
          "displayValue": "47.85KiB",
          "value": 49000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.totalInitialSizeCSS",
      "label": "Initial CSS",
      "runs": [
        {
          "delta": -1000,
          "deltaPercentage": -9.09090909,
          "deltaType": "POSITIVE",
          "displayDelta": "-1000B",
          "displayDeltaPercentage": "-9.09%",
          "displayValue": "9.77KiB",
          "regression": false,
          "value": 10000,
        },
        {
          "displayValue": "10.74KiB",
          "value": 11000,
        },
      ],
    },
    {
      "biggerIsBetter": null,
      "changed": true,
      "key": "webpack.cacheInvalidation",
      "label": "Cache Invalidation",
      "runs": [
        {
          "delta": 95.24,
          "deltaPercentage": 100,
          "deltaType": "CHANGE",
          "displayDelta": "+95.24%",
          "displayDeltaPercentage": "+100%",
          "displayValue": "95.24%",
          "regression": null,
          "value": 95.24,
        },
        {
          "displayValue": "0%",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": null,
      "changed": true,
      "key": "webpack.moduleCount",
      "label": "Modules",
      "runs": [
        {
          "delta": 2,
          "deltaPercentage": 40,
          "deltaType": "CHANGE",
          "displayDelta": "+2",
          "displayDeltaPercentage": "+40%",
          "displayValue": "7",
          "regression": null,
          "value": 7,
        },
        {
          "displayValue": "5",
          "value": 5,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.duplicateModulesCount",
      "label": "Duplicate Modules",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0",
          "displayDeltaPercentage": "0%",
          "displayValue": "0",
          "value": 0,
        },
        {
          "displayValue": "0",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": null,
      "changed": false,
      "key": "webpack.duplicateCode",
      "label": "Duplicate Code",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0%",
          "displayDeltaPercentage": "0%",
          "displayValue": "0%",
          "regression": null,
          "value": 0,
        },
        {
          "displayValue": "0%",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": null,
      "changed": false,
      "key": "webpack.chunkCount",
      "label": "Chunks",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0",
          "displayDeltaPercentage": "0%",
          "displayValue": "2",
          "regression": null,
          "value": 2,
        },
        {
          "displayValue": "2",
          "value": 2,
        },
      ],
    },
    {
      "biggerIsBetter": null,
      "changed": false,
      "key": "webpack.assetCount",
      "label": "Assets",
      "runs": [
        {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0",
          "displayDeltaPercentage": "0%",
          "displayValue": "4",
          "regression": null,
          "value": 4,
        },
        {
          "displayValue": "4",
          "value": 4,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.packageCount",
      "label": "Packages",
      "runs": [
        {
          "delta": 2,
          "deltaPercentage": 66.66666667,
          "deltaType": "HIGH_NEGATIVE",
          "displayDelta": "+2",
          "displayDeltaPercentage": "+66.67%",
          "displayValue": "5",
          "regression": true,
          "value": 5,
        },
        {
          "displayValue": "3",
          "value": 3,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.duplicatePackagesCount",
      "label": "Duplicate Packages",
      "runs": [
        {
          "delta": 1,
          "deltaPercentage": 100,
          "deltaType": "HIGH_NEGATIVE",
          "displayDelta": "+1",
          "displayDeltaPercentage": "+100%",
          "displayValue": "1",
          "regression": true,
          "value": 1,
        },
        {
          "displayValue": "0",
          "value": 0,
        },
      ],
    },
  ],
  "summary": {
    "webpack": [
      {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0B",
        "displayDeltaPercentage": "0%",
        "displayValue": "61.52KiB",
        "label": "Bundle Size",
        "value": 63000,
      },
      {
        "delta": 1000,
        "deltaPercentage": 2.04081633,
        "deltaType": "LOW_NEGATIVE",
        "displayDelta": "+1000B",
        "displayDeltaPercentage": "+2.04%",
        "displayValue": "48.83KiB",
        "label": "Initial JS",
        "regression": true,
        "value": 50000,
      },
      {
        "delta": -1000,
        "deltaPercentage": -9.09090909,
        "deltaType": "POSITIVE",
        "displayDelta": "-1000B",
        "displayDeltaPercentage": "-9.09%",
        "displayValue": "9.77KiB",
        "label": "Initial CSS",
        "regression": false,
        "value": 10000,
      },
      {
        "delta": 95.24,
        "deltaPercentage": 100,
        "deltaType": "CHANGE",
        "displayDelta": "+95.24%",
        "displayDeltaPercentage": "+100%",
        "displayValue": "95.24%",
        "label": "Cache Invalidation",
        "regression": null,
        "value": 95.24,
      },
      {
        "delta": 2,
        "deltaPercentage": 40,
        "deltaType": "CHANGE",
        "displayDelta": "+2",
        "displayDeltaPercentage": "+40%",
        "displayValue": "7",
        "label": "Modules",
        "regression": null,
        "value": 7,
      },
      {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0",
        "displayDeltaPercentage": "0%",
        "displayValue": "0",
        "label": "Duplicate Modules",
        "value": 0,
      },
      {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0%",
        "displayDeltaPercentage": "0%",
        "displayValue": "0%",
        "label": "Duplicate Code",
        "regression": null,
        "value": 0,
      },
      {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0",
        "displayDeltaPercentage": "0%",
        "displayValue": "2",
        "label": "Chunks",
        "regression": null,
        "value": 2,
      },
      {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0",
        "displayDeltaPercentage": "0%",
        "displayValue": "4",
        "label": "Assets",
        "regression": null,
        "value": 4,
      },
      {
        "delta": 2,
        "deltaPercentage": 66.66666667,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+2",
        "displayDeltaPercentage": "+66.67%",
        "displayValue": "5",
        "label": "Packages",
        "regression": true,
        "value": 5,
      },
      {
        "delta": 1,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+1",
        "displayDeltaPercentage": "+100%",
        "displayValue": "1",
        "label": "Duplicate Packages",
        "regression": true,
        "value": 1,
      },
    ],
  },
}
`;

exports[`report / createReport single source 1`] = `
{
  "assets": [
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "main.css",
      "label": "main.css",
      "runs": [
        {
          "chunkId": "1",
          "displayValue": "9.77KiB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a1b2c3d.css",
          "value": 10000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "main.js",
      "label": "main.js",
      "runs": [
        {
          "chunkId": "1",
          "displayValue": "48.83KiB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a2b3c4d.js",
          "value": 50000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "logo.png",
      "label": "logo.png",
      "runs": [
        {
          "displayValue": "1000B",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "logo.a3b4c5d.png",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "index.html",
      "label": "index.html",
      "runs": [
        {
          "displayValue": "1.95KiB",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "index.html",
          "value": 2000,
        },
      ],
    },
  ],
  "createdAt": "2019-01-10T00:00:00.000Z",
  "insights": {
    "webpack": {
      "assetsSizeTotal": {
        "data": {
          "info": {
            "delta": 63000,
            "deltaPercentage": 100,
            "deltaType": "HIGH_NEGATIVE",
            "displayDelta": "+61.52KiB",
            "displayDeltaPercentage": "+100%",
            "displayValue": "61.52KiB",
            "regression": true,
            "value": 63000,
          },
          "md": "*Bundle Size* — *61.52KiB* (*+100%*).",
          "text": "Bundle Size — 61.52KiB (+100%).",
        },
        "type": "info",
      },
      "duplicatePackages": {
        "data": {
          "package-c": [
            "package-a:package-c",
            "package-c",
          ],
        },
        "type": "warning",
      },
      "duplicatePackagesV3": {
        "data": {
          "packages": {
            "package-c": [
              "package-a:package-c",
              "package-c",
            ],
          },
          "text": "Bundle contains 1 duplicate package",
        },
        "type": "warning",
      },
    },
  },
  "modules": [
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "module-a",
      "label": "module-a",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1000B",
          "name": "module-a",
          "originalValue": 1000,
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "module-b",
      "label": "module-b",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1.95KiB",
          "name": "module-b",
          "originalValue": 2000,
          "value": 2000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-a/index.js",
      "label": "node_modules/package-a/index.js",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1000B",
          "name": "node_modules/package-a/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-a/node_modules/package-c/index.js",
      "label": "node_modules/package-a/node_modules/package-c/index.js",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1000B",
          "name": "node_modules/package-a/node_modules/package-c/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-b/index.js",
      "label": "node_modules/package-b/index.js",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1000B",
          "name": "node_modules/package-b/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-c/index.js",
      "label": "node_modules/package-c/index.js",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1000B",
          "name": "node_modules/package-c/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-d/index.js",
      "label": "node_modules/package-d/index.js",
      "runs": [
        {
          "chunkIds": [
            "1",
          ],
          "displayValue": "1000B",
          "name": "node_modules/package-d/index.js",
          "originalValue": 1000,
          "value": 1000,
        },
      ],
    },
  ],
  "packages": [
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-a",
      "label": "package-a",
      "runs": [
        {
          "displayValue": "1000B",
          "name": "package-a",
          "path": "node_modules/package-a",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-a:package-c",
      "label": "package-a:package-c",
      "runs": [
        {
          "displayValue": "1000B",
          "name": "package-c",
          "path": "node_modules/package-a/node_modules/package-c",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-b",
      "label": "package-b",
      "runs": [
        {
          "displayValue": "1000B",
          "name": "package-b",
          "path": "node_modules/package-b",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-c",
      "label": "package-c",
      "runs": [
        {
          "displayValue": "1000B",
          "name": "package-c",
          "path": "node_modules/package-c",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-d",
      "label": "package-d",
      "runs": [
        {
          "displayValue": "1000B",
          "name": "package-d",
          "path": "node_modules/package-d",
          "value": 1000,
        },
      ],
    },
  ],
  "runs": [
    {
      "internalBuildNumber": 1,
      "webpack": {
        "builtAt": "2019-01-01T00:00:00.000Z",
        "chunks": [
          {
            "id": "1",
            "name": "main",
          },
        ],
        "hash": "abcd1234",
      },
    },
  ],
  "sizes": [
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeJS",
      "label": "JS",
      "runs": [
        {
          "displayValue": "48.83KiB",
          "value": 50000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeCSS",
      "label": "CSS",
      "runs": [
        {
          "displayValue": "9.77KiB",
          "value": 10000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeIMG",
      "label": "IMG",
      "runs": [
        {
          "displayValue": "1000B",
          "value": 1000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeMEDIA",
      "label": "Media",
      "runs": [
        {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeFONT",
      "label": "Fonts",
      "runs": [
        {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeHTML",
      "label": "HTML",
      "runs": [
        {
          "displayValue": "1.95KiB",
          "value": 2000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeOTHER",
      "label": "Other",
      "runs": [
        {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
  ],
  "stats": [
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.totalSizeByTypeALL",
      "label": "Bundle Size",
      "runs": [
        {
          "displayValue": "61.52KiB",
          "value": 63000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.totalInitialSizeJS",
      "label": "Initial JS",
      "runs": [
        {
          "displayValue": "48.83KiB",
          "value": 50000,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.totalInitialSizeCSS",
      "label": "Initial CSS",
      "runs": [
        {
          "displayValue": "9.77KiB",
          "value": 10000,
        },
      ],
    },
    {
      "biggerIsBetter": null,
      "changed": false,
      "key": "webpack.cacheInvalidation",
      "label": "Cache Invalidation",
      "runs": [
        {
          "displayValue": "0%",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": null,
      "changed": false,
      "key": "webpack.moduleCount",
      "label": "Modules",
      "runs": [
        {
          "displayValue": "7",
          "value": 7,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.duplicateModulesCount",
      "label": "Duplicate Modules",
      "runs": [
        {
          "displayValue": "0",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": null,
      "changed": false,
      "key": "webpack.duplicateCode",
      "label": "Duplicate Code",
      "runs": [
        {
          "displayValue": "0%",
          "value": 0,
        },
      ],
    },
    {
      "biggerIsBetter": null,
      "changed": false,
      "key": "webpack.chunkCount",
      "label": "Chunks",
      "runs": [
        {
          "displayValue": "2",
          "value": 2,
        },
      ],
    },
    {
      "biggerIsBetter": null,
      "changed": false,
      "key": "webpack.assetCount",
      "label": "Assets",
      "runs": [
        {
          "displayValue": "4",
          "value": 4,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.packageCount",
      "label": "Packages",
      "runs": [
        {
          "displayValue": "5",
          "value": 5,
        },
      ],
    },
    {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.duplicatePackagesCount",
      "label": "Duplicate Packages",
      "runs": [
        {
          "displayValue": "1",
          "value": 1,
        },
      ],
    },
  ],
  "summary": {
    "webpack": [
      {
        "delta": 63000,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+61.52KiB",
        "displayDeltaPercentage": "+100%",
        "displayValue": "61.52KiB",
        "label": "Bundle Size",
        "regression": true,
        "value": 63000,
      },
      {
        "delta": 50000,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+48.83KiB",
        "displayDeltaPercentage": "+100%",
        "displayValue": "48.83KiB",
        "label": "Initial JS",
        "regression": true,
        "value": 50000,
      },
      {
        "delta": 10000,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+9.77KiB",
        "displayDeltaPercentage": "+100%",
        "displayValue": "9.77KiB",
        "label": "Initial CSS",
        "regression": true,
        "value": 10000,
      },
      {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0%",
        "displayDeltaPercentage": "0%",
        "displayValue": "0%",
        "label": "Cache Invalidation",
        "regression": null,
        "value": 0,
      },
      {
        "delta": 7,
        "deltaPercentage": 100,
        "deltaType": "CHANGE",
        "displayDelta": "+7",
        "displayDeltaPercentage": "+100%",
        "displayValue": "7",
        "label": "Modules",
        "regression": null,
        "value": 7,
      },
      {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0",
        "displayDeltaPercentage": "0%",
        "displayValue": "0",
        "label": "Duplicate Modules",
        "value": 0,
      },
      {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0%",
        "displayDeltaPercentage": "0%",
        "displayValue": "0%",
        "label": "Duplicate Code",
        "regression": null,
        "value": 0,
      },
      {
        "delta": 2,
        "deltaPercentage": 100,
        "deltaType": "CHANGE",
        "displayDelta": "+2",
        "displayDeltaPercentage": "+100%",
        "displayValue": "2",
        "label": "Chunks",
        "regression": null,
        "value": 2,
      },
      {
        "delta": 4,
        "deltaPercentage": 100,
        "deltaType": "CHANGE",
        "displayDelta": "+4",
        "displayDeltaPercentage": "+100%",
        "displayValue": "4",
        "label": "Assets",
        "regression": null,
        "value": 4,
      },
      {
        "delta": 5,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+5",
        "displayDeltaPercentage": "+100%",
        "displayValue": "5",
        "label": "Packages",
        "regression": true,
        "value": 5,
      },
      {
        "delta": 1,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+1",
        "displayDeltaPercentage": "+100%",
        "displayValue": "1",
        "label": "Duplicate Packages",
        "regression": true,
        "value": 1,
      },
    ],
  },
}
`;
